fix play button, fixed overlaping, need to fix play button to autoplay music

--- a/style.css
+++ b/style.css
@@ -42,4 +42,5 @@ body{
    font-size: 30px;
    font-weight: bold;
    font-family: verdana;
+   padding-bottom: 10px;
 }
